--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.4.7",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.14",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
