--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.4.47",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.1",
